--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,22 +26,22 @@ jobs:
 
             - name: Terraform Init
               run: terraform init
-              working-directory: ./TERRAFORM-CICD
+              working-directory: ./Terraform-cicd
             
             - name: Terraform Validate
               run: terraform validate
-              working-directory: ./TERRAFORM-CICD
+              working-directory: ./Terraform-cicd
 
             - name: Terraform Format
               run: terraform fmt -recursive
-              working-directory: ./TERRAFORM-CICD
+              working-directory: ./Terraform-cicd
 
             - name: Terraform Plan
               run: terraform plan
-              working-directory: ./TERRAFORM-CICD
+              working-directory: ./Terraform-cicd
              
             - name: Terraform Apply
               run: terraform apply -auto-approve
-              working-directory: ./TERRAFORM-CICD
+              working-directory: ./Terraform-cicd
              
             
