--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,20 +27,20 @@ jobs:
 
       - name: Terraform Init
         run: terraform init
-        working-directory: ./Terraform-cicd
+        working-directory: .
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: ./Terraform-cicd
+        working-directory: .
 
       - name: Terraform Format
         run: terraform fmt -recursive
-        working-directory: ./Terraform-cicd
+        working-directory: .
 
       - name: Terraform Plan
         run: terraform plan
-        working-directory: ./Terraform-cicd
+        working-directory: .
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
-        working-directory: ./Terraform-cicd
+        working-directory: .
